Eliminado Apocalipsis como encantamiento. Intercambiado por Ira de los Dioses. Ahora al matar a los dioses empieza el Apocalipsis y se unen los Cinco Jinetes, con mucho mas poder y mas dificiles de derrotar que los dioses. Eliminada la faccion Neutral. Ahora las recetas exigen 1 artefacto y runas en lugar de 2 artefactos. Eliminado el uncovered de descubrir al del encantamiento Apocalipsis. Aumentadas tierras al registrarse a 666. Mejorados help y patch con los ultimos cambios. Terminado market con PayPal. Cambiado GodCommand a ApocalypseCommand y WrathEntity a ApocalypseEntity.

--- a/src/Archmage/UserBundle/Resources/views/factions.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/factions.html.twig
@@ -10,7 +10,7 @@
         <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Fantasmal'|slug }}" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/ghost.png') }}"/></a>
         <div class="caption hidden-xs hidden-sm text-info">
             <h3>Fantasmal</h3>
-            <small>Mente y Espíritu</small>
+            <small>Mente y Ciencia</small>
         </div>
     </div>
     <div class="col-xs-2">
