--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -32,13 +32,7 @@
             <div class="panel panel-default"><a name="intro"></a>
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-question-circle"></i>Introducción</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>En la desolada tierra de W&yuml;z&auml;rd, asumirás el rol de un mag@ novici@ intentando hacerse un hueco en un mundo plagado de enemigos. Competirás contra otros jugadores y NPCs por la supremacía en una carrera económica y militar, investigando diversos y poderosos <span class="label label-extra">Hechizos</span>, reclutando gran variedad de <span class="label label-extra">Unidades</span>, contratando <span class="label label-extra">Héroes</span> que ayudarán en tu campaña y encontrando misteriosos <span class="label label-artifact">Artefactos</span> que usar en tu beneficio, o incluso en perjuicio de otros.</p>
-                </div>
-            </div>
-            <div class="panel panel-default"><a name="multicuentas"></a>
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i>Multicuentas</div>
-                <div class="panel-body text-responsive text-only">
-                    <p style="color:red;">El uso de varias cuentas por la misma persona otorga una tremenda ventaja y va en contra de las normas del juego. Los infractores serán perseguidos, <span class="label label-extra">baneados</span> a perpetuidad y <span class="label label-extra">sodomizados con un paraguas</span>.</p>
+                    <p>En la desolada pero potencialmente mágica tierra de W&yuml;z&auml;rd, asumirás el rol de un mag@ novici@ intentando hacerse un hueco en un mundo plagado de enemigos. Competirás contra otros jugadores y NPCs por la supremacía en una carrera económica y militar, investigando diversos y poderosos <span class="label label-extra">Hechizos</span>, reclutando gran variedad de <span class="label label-extra">Unidades</span>, contratando <span class="label label-extra">Héroes</span> que ayudarán en tu campaña y encontrando misteriosos <span class="label label-artifact">Artefactos</span> que usar en tu beneficio, o incluso en perjuicio de otros.</p>
                 </div>
             </div>
             <div class="panel panel-default">
@@ -120,16 +114,20 @@
             <div class="panel panel-default"><a name="fin"></a>
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-magic"></i>Fin del Juego</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>El juego puede acabar de dos maneras: por <span class="label label-extra">Apocalipsis</span> o por <span class="label label-extra">Ira de los Dioses</span>.</p>
-                    <p>Cuando un mago ha conseguido encantarse a sí mismo con <span class="label label-extra">Apocalipsis</span> y mantenerlo durante 666 turnos. El servidor anunciará que alguien (pero no quién) ha lanzado dicho encantamiento, por lo que será tarea del resto de jugadores encontrar y hacer la vida imposible al mago en cuestión, lanzandole <span class="label label-extra">Hechizos</span>, <span class="label label-artifact">Artefactos</span>, <span class="label label-extra">Encantamientos</span> y <span class="label label-extra">Ataques</span> para intentar mermar sus posibilidades. Cuando alguien descubra al dueño del Encantamiento mediante un Espionaje, en el Ranking saldrá su nombre junto al símbolo <i class="fa fa-fw fa-eye"></i>, para que el resto de jugadores tenga claro que se ha encontrado al culpable y deje de buscarle. Si el encantamiento se rompe de manera forzada (es decir, por no poder pagar los mantenientos, cosa habitual si se le despoja de tierras suficientes) el juego continará de forma normal.</p>
-                    <p>Cuando todos los dioses se hayan quedado sin ejército por vuestros blasfemos ataques y conjuraciones, enfadados, lanzarán la <span class="label label-extra">Ira de los Dioses</span>. También es posible activar la <span class="label label-extra">Ira de los Dioses</span> si un jugador posee los 5 <span class="label label-legendary">Anillos</span> legendarios y activa cualquiera de ellos. A partir de ese momento, todos los jugadores deberán luchar entre ellos para vencer, pues al cabo de unas horas, ganará el primer jugador del Ranking.</p>
-                    <p>Se convertirá en un tira y afloja por ver qué mago es capaz de aguantar las embestidas de todo el servidor hasta que alguien salga vencedor. Cuando alguien gane la partida, se añadirá al tablón de Leyendas con información como la fecha de la victoria, el poder y las tierras que tenía el mago, para futuras referencias. El juego se detendrá y nadie podrá efectuar ninguna acción, y en apenas 24h, el servidor se reiniciará, borrando toda la base de datos y volviendo a empezar una nueva temporada desde cero. Los jugadores tendrán que volver a registrarse para jugar, pero de esta forma podrán probar otros colores, e incluso cambiarse de nick para evitar represalias o venganzas.</p>
+                    <p>Cuando un dios se queda sin tropas que sacrificar para obtener su increible poder, el sello que guardan celosamente se rompe sin remedio. Una vez que todos los sellos se hayan roto, nada podrá detener ya el <span class="label label-extra">Apocalipsis</span>, que dará lugar al fin de los tiempos. En teoría no deberíais hacerlo, pero vuestro infinito ego y sed de poder os mueve, aunque solo uno pueda ser recordado en la sala de las leyendas. El fin vendrá acompañado de los Cinco Jinetes del Apocalipsis: <span class="label label-warning">Muerte</span>, <span class="label label-danger">Guerra</span>, <span class="label label-primary">Conquista</span>, <span class="label label-info">Hambre</span> y <span class="label label-success">Peste</span>. A partir de ese momento, todos los jugadores deberán luchar entre ellos para vencer, pues al cabo de una semana, el mundo que conocemos llegará a su fin, terminando con todo rastro de magia en la tierra. Cuando no quede nada más que polvo, ganará el primer jugador del <span class="label label-extra">Ranking</span>.</p>
+                    <p>Se convertirá en un tira y afloja por ver qué mago es capaz de superar a los demás hasta que alguien salga vencedor. Cuando alguien gane la partida, se añadirá al tablón de <span class="label label-extra">Leyendas</span> con información como la fecha de la victoria, el poder y las tierras que tenía el mago, para futuras referencias. El juego se detendrá y nadie podrá efectuar ninguna acción, y en unas horas, el servidor se reiniciará, borrando toda la base de datos y volviendo a empezar una nueva temporada desde cero. Normalmente se verá acompañado de un nuevo parche de contenido adicional. Los jugadores tendrán que volver a registrarse para jugar, pero de esta forma podrán probar otras facciones, e incluso cambiarse de nombre para evitar futuras represalias o venganzas personales.</p>
                 </div>
             </div>
             <div class="panel panel-default"><a name="runas"></a>
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-ils"></i>Runas</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>Las <span class="label label-artifact">Runas</span> proporcionan recursos instantáneos a los jugadores, otorgando una importante ventaja si se gastan en el momento preciso. Son extremadamente difíciles de conseguir, pero se comenta que completar <span class="label label-quest">Aventuras</span> es una buena manera. Todos los jugadores empiezan con unas pocas y, aunque no son necesarias para ganar, algunos jugadores pueden optar por adquirir más a través de nuestra <span class="label label-extra">Tienda</span> interna del juego. En ocasiones especiales incluso se regalarán algunas a todos los jugadores.</p>
+                    <p>Las <span class="label label-artifact">Runas</span> proporcionan los más poderosos <span class="label label-artifact">Artefactos</span> a los jugadores, otorgando una importante ventaja si se usan en el momento preciso. Son difíciles de conseguir, pero completar <span class="label label-quest">Aventuras</span> es una buena manera de hacerlo. Todos los jugadores empiezan con unas pocas y, aunque no son necesarias para ganar, algunos pueden optar por adquirir más a través de nuestra <span class="label label-extra">Tienda</span> interna del juego. En ocasiones especiales incluso se regalarán algunas.</p>
+                </div>
+            </div>
+            <div class="panel panel-default"><a name="multicuentas"></a>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i>Multicuentas</div>
+                <div class="panel-body text-responsive text-only">
+                    <p style="color:red;">El uso de varias cuentas por la misma persona otorga una tremenda ventaja y va en contra de las normas del juego. Los infractores serán perseguidos, <span class="label label-extra">baneados</span> a perpetuidad y <span class="label label-extra">sodomizados con un paraguas</span>.</p>
                 </div>
             </div>
         </div>
@@ -316,8 +314,8 @@
                             <img class="custom-thumbnail" src="{{ asset( 'bundles/archmagegame/images/kingdom/alchemy.png' ) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-artifact">Primer Artefacto</span></div>
-                            <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-artifact">Segundo Artefacto</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-artifact">Artefacto a transmutar</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-ils"></i><span class="label label-artifact">Runas necesarias</span></div>
                             <div class="col-xs-12"><i class="fa fa-fw fa-money"></i><span class="label label-extra">Oro necesario</span></div>
                             <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-artifact">Artefacto resultante</span></div>
                             <div class="col-xs-12 text-lore"><small><i>Un poco de esto, un poco de aquello y... TACHÁN!</i></small></div>
@@ -340,7 +338,6 @@
                             <img class="custom-thumbnail" src="{{ asset( 'bundles/archmagegame/images/kingdom/quest.png' ) }}" />
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-extra">Tropa enemiga</span></div>
                             <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-extra">Tropa enemiga</span></div>
                             <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-extra">Tropa enemiga</span></div>
                             <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-extra">Tropa enemiga</span></div>
