--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -16,10 +16,13 @@
                 <div class="panel-body text-responsive">
                     <ul>
                         <li>Comienza la Temporada 5.</li>
-                        <li>Mejorados los mensajes de error durante el login, el registro y la recuperación y el cambio de contraseñas.</li>
-                        <li>Ahora es necesario introducir un correo electrónico válido para registrarse, ya que se enviará un enlace para activar la cuenta.</li>
-                        <li>Ahora las recetas de alquimia piden también <span class="label label-artifact">Runas</span>.</li>
-                        <li>Ahora pueden comprarse <span class="label label-artifact">Packs de Runas</span> en el Mercado, a través de PayPal.</li>
+                        <li>Se ha eliminado del juego el encantamiento <span class="label label-extra">Apocalipsis</span>, los jugadores no podrán investigarlo.</li>
+                        <li>Se ha cambiado la <span class="label label-extra">Ira de los Dioses</span> por <span class="label label-extra">Apocalipsis</span>. Ahora, al derrotar a todos los dioses, romperéis los sellos mágicos que detenían el fin del mundo. tendréis alrededor de una semana para superar a los Cinco Jinetes del Apocalipsis y quedar primeros en el ranking para ganar.</li>
+                        <li>Se ha eliminado del juego la facción <span class="label label-extra">Neutral</span> al no tener sentido.</li>
+                        <li>Mejorados los mensajes de error durante el login, el registro y la recuperación o cambio de contraseña.</li>
+                        <li>Ahora es necesario introducir un correo electrónico válido para registrarse, ya que se enviará un enlace para activar la cuenta. Esta decisión se basa principalmente en evitar (o reducir) el número de jugadores con multicuenta. Jamás se usarán para mandar spam, ni siquiera del juego.</li>
+                        <li>Ahora las <span class="label label-recipe">Recetas</span> de alquimia transmutan un solo <span class="label label-artifact">Artefacto</span> por otro en lugar de exigir dos, pero en su lugar exigen <span class="label label-artifact">Runas</span> para hacerlo.</li>
+                        <li>Ahora pueden comprarse <span class="label label-artifact">Packs de Runas</span> en el Mercado, a través de PayPal. Si os gusta el juego, compartidlo con vuestros amigos! Invitadme a una caña de vez en cuando!</li>
                     </ul>
                 </div>
                 <div class="panel-footer text-center">Beta abierta</div>
