--- a/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
@@ -72,8 +72,9 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Invítame a un <span class="label label-success"><i class="fa fa-fw fa-coffee"></i>café</span>!</li>
-                    <li class="list-group-item"><i class="fa fa-fw fa-times"></i>Progresa en el juego!</li>
-                    <li class="list-group-item"><i class="fa fa-fw fa-times"></i>Aniquila a tus enemigos!</li>
+                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Progresa en la alquimia!</li>
+                    <li class="list-group-item"><i class="fa fa-fw fa-times"></i>Progresa en el reino!</li>
+                    <li class="list-group-item"><i class="fa fa-fw fa-times"></i>Progresa en el ranking!</li>
                 </ul>
                 <div class="panel-footer">
                     <a class="btn btn-lg btn-block btn-default" href="{{ path('archmage_payment_purchase_prepare', {'id': pack1.id} ) }}" role="button"><i class="fa fa-fw fa-paypal"></i> Comprar</a>
@@ -92,8 +93,9 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Invítame a una <span class="label label-quest"><i class="fa fa-fw fa-beer"></i>pinta</span>!</li>
-                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Progresa en el juego!</li>
-                    <li class="list-group-item"><i class="fa fa-fw fa-times"></i>Aniquila a tus enemigos!</li>
+                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Progresa en la alquimia!</li>
+                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Progresa en el reino!</li>
+                    <li class="list-group-item"><i class="fa fa-fw fa-times"></i>Progresa en el ranking!</li>
                 </ul>
                 <div class="panel-footer">
                     <a class="btn btn-lg btn-block btn-default" href="{{ path('archmage_payment_purchase_prepare', {'id': pack2.id} ) }}" role="button"><i class="fa fa-fw fa-paypal"></i> Comprar</a>
@@ -112,8 +114,9 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Invítame a un <span class="label label-danger"><i class="fa fa-fw fa-glass"></i>whiskey</span>!</li>
-                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Progresa en el juego!</li>
-                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Aniquila a tus enemigos!</li>
+                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Progresa en la alquimia!</li>
+                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Progresa en el reino!</li>
+                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Progresa en el ranking!</li>
                 </ul>
                 <div class="panel-footer">
                     <a class="btn btn-lg btn-block btn-default" href="{{ path('archmage_payment_purchase_prepare', {'id': pack3.id} ) }}" role="button"><i class="fa fa-fw fa-paypal"></i> Comprar</a>
