--- a/src/Archmage/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/Registration/register.html.twig
@@ -8,7 +8,7 @@
         {% include "ArchmageUserBundle::logo.html.twig" %}
         <form id="register" name="register" class="form-signin" data-toggle="validator" action="{{ path("fos_user_registration_register") }}" {{ form_enctype(form) }} method="post">
             <select class="selectpicker" id="faction" name="faction" data-live-search="false" data-style="btn-default btn-lg">
-            {% for faction in factions if faction.name != 'Neutral' %}
+            {% for faction in factions %}
                 <option value="{{ faction.id }}" data-content="<span class='label label-{{ faction.class }}'>{{ faction.name }}</span>">{{ faction.name }}</option>
             {% endfor %}
             </select>
