--- a/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
@@ -65,15 +65,15 @@
             <div class="panel panel-success panel-pricing text-center">
                 <div class="panel-heading">
                     <i class="fa fa-fw fa-3x fa-gift"></i>
-                    <h2>Pack del Aprendiz</h2>
+                    <h2>Pack del Alquimista</h2>
                 </div>
                 <div class="panel-body">
                     <p class="text-pack"><strong>+{{ pack1.runes }}<i class="fa fa-fw fa-ils"></i>/ {{ pack1.price }}<sup>€</sup></strong></p>
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Invítame a un <span class="label label-success"><i class="fa fa-fw fa-coffee"></i>café</span>!</li>
-                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Progresa en la alquimia!</li>
-                    <li class="list-group-item"><i class="fa fa-fw fa-times"></i>Progresa en el reino!</li>
+                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Desarrolla tu alquimia!</li>
+                    <li class="list-group-item"><i class="fa fa-fw fa-times"></i>Adquiere nuevos artefactos!</li>
                     <li class="list-group-item"><i class="fa fa-fw fa-times"></i>Progresa en el ranking!</li>
                 </ul>
                 <div class="panel-footer">
@@ -86,15 +86,15 @@
             <div class="panel panel-quest panel-pricing text-center">
                 <div class="panel-heading">
                     <i class="fa fa-fw fa-3x fa-gift"></i><i class="fa fa-fw fa-3x fa-gift"></i>
-                    <h2>Pack del Hechicero</h2>
+                    <h2>Pack del Mercader</h2>
                 </div>
                 <div class="panel-body">
                     <p class="text-pack"><strong>+{{ pack2.runes }}<i class="fa fa-fw fa-ils"></i>/ {{ pack2.price }}<sup>€</sup></strong></p>
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Invítame a una <span class="label label-quest"><i class="fa fa-fw fa-beer"></i>pinta</span>!</li>
-                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Progresa en la alquimia!</li>
-                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Progresa en el reino!</li>
+                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Desarrolla tu alquimia!</li>
+                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Adquiere nuevos artefactos!</li>
                     <li class="list-group-item"><i class="fa fa-fw fa-times"></i>Progresa en el ranking!</li>
                 </ul>
                 <div class="panel-footer">
@@ -114,8 +114,8 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Invítame a un <span class="label label-danger"><i class="fa fa-fw fa-glass"></i>whiskey</span>!</li>
-                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Progresa en la alquimia!</li>
-                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Progresa en el reino!</li>
+                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Desarrolla tu alquimia!</li>
+                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Adquiere nuevos artefactos!</li>
                     <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Progresa en el ranking!</li>
                 </ul>
                 <div class="panel-footer">
