--- a/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
@@ -4,14 +4,6 @@
 
 {% block body %}
 <div class="container">
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-trophy"></i>Perfil</h1>
-                {#{% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}#}
-            </div>
-        </div>
-    </div>
     <div class="jumbotron text-center">
         <div class="row">
             <div class="col-xs-12" id="profile">
@@ -21,7 +13,6 @@
                 <div class="info">
                     <h1 class="text-center">{{ profile.nick }}</h1>
                     {% if profile == player %}
-                        {% if not player.chat %}<a href="{{ path( 'archmage_game_kingdom_market' ) }}" class="link">Conecta</a> tu cuenta con <a href="https://telegram.org/" class="link">Telegram</a>{% else %}Conectado con <a href="https://telegram.org/" class="link">Telegram</a>{% endif %} |
                         <a href="{{ path('fos_user_change_password') }}" class="link">Cambiar contraseña</a>
                         {# <a href="#" class="link">Borrar cuenta</a> #}
                         <br>
@@ -29,7 +20,7 @@
                     <br>
                     {% for achievement in profile.achievements %}
                     <div class="col-xs-12 col-md-5 col-md-offset-{% if loop.index is odd %}0{% else %}2{% endif %} alert alert-{{ profile.faction.class }} text-center text-responsive">
-                        <i class="fa fa-fw fa-lg fa-trophy"></i>{{ achievement.name }} <small>({{ achievement.description }})</small>
+                        <i class="fa fa-fw fa-lg fa-trophy"></i>{{ achievement.name }}<br><small>{{ achievement.description }}</small>
                     </div>
                     {% endfor %}
                 </div>
