--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -7,19 +7,29 @@
     <div class="row">
         <!-- TOP button -->
         <span id="top-link-block" class="hidden">
-            <a href="#top" class="btn btn-sm btn-default" onclick="$('html,body').animate({scrollTop:0},'slow');return false;">
-                <i class="fa fa-fw fa-lg fa-arrow-circle-up"></i>
-            </a>
+            <a href="#top" class="btn btn-lg btn-default"><i class="fa fa-fw fa-lg fa-arrow-circle-up"></i></a>
         </span>
         <!-- searh box -->
-        <div class="col-xs-12">
+        <div class="col-xs-12 text-center search">
             <div class="form-group searchbox">
                 <div class="input-group stylish-input-group" id="tour-help">
-                    <input type="text" id="searchbox" name="searchbox" class="form-control" placeholder="Buscar por facciones, hechizos, encantamientos, unidades, artefactos, tipos, familias, recursos, etc...">
                     <span class="input-group-addon">
-                        &nbsp;<i class="fa fa-fw fa-lg fa-search fa-inverse"></i>&nbsp;
+                        <i class="fa fa-fw fa-lg fa-search fa-inverse"></i>
+                    </span>
+                    <input type="text" id="searchbox" name="searchbox" class="form-control" placeholder="Busca facciones, hechizos, encantamientos, unidades, artefactos, familias, lo que sea!">
+                    <span class="input-group-addon">
+                        <i class="fa fa-fw fa-lg fa-search fa-inverse"></i>
                     </span>
                 </div>
+            </div>
+            <div class="btn-group btn-group-justified searchbox" role="group" aria-label="...">
+                <a href="#intro" class="btn btn-default"><i class="fa fa-fw fa-question-circle"></i>General</a>
+                <a href="#facciones" class="btn btn-default"><i class="fa fa-fw fa-rebel"></i>Facciones</a>
+                <a href="#unidades" class="btn btn-default"><i class="fa fa-fw fa-home"></i>Unidades</a>
+                <a href="#heroes" class="btn btn-default"><i class="fa fa-fw fa-group"></i>Héroes</a>
+                <a href="#hechizos" class="btn btn-default"><i class="fa fa-fw fa-magic"></i>Hechizos</a>
+                <a href="#artefactos" class="btn btn-default"><i class="fa fa-fw fa-joomla"></i>Artefactos</a>
+                <a href="#comentarios" class="btn btn-default"><i class="fa fa-fw fa-commenting"></i>Comentarios</a>
             </div>
         </div>
         <div class="col-xs-12">
@@ -380,6 +390,20 @@
             </div>
         </div>
         {% endfor %}
+        <div class="col-xs-12">
+            <div class="page-header text-center"><a name="comentarios"></a>
+                <h1><i class="fa fa-fw fa-commenting"></i>Comentarios</h1>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="panel panel-default">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-pencil-square-o"></i>Comenta errores, nuevas ideas, sugerencias, quejas...</div>
+                <div class="panel-body text-only">
+                    {{ knp_disqus_render('Wyzard', {'identifier': '/help#comentarios', 'limit': 100}) }}
+                </div>
+                <div class="panel-footer text-center">Modero severamente los comentarios, así que nada de chorradas!</div>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
