Arreglado cross-ajax en htaccess para glyphicons sin https. Arreglado #top anchor en help. Arreglado parameters.yml.dist.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -43,7 +43,7 @@
         <meta name="theme-color" content="#ffffff">
     </head>
     {# body #}
-    <body><a name="top"></a>
+    <body>
         <img src="{{ asset('bundles/archmagegame/images/background/theme.jpg') }}" class="background" />
         {# block topbar menu #}
         {% block navbar %}{% endblock %}
