--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Ayuda{% endblock %}
 
 {% block body %}
-<div class="container">
+<div class="container"><a name="top"></a>
     <div class="row">
         <!-- TOP button -->
         <span id="top-link-block" class="hidden">
-            <a href="#top" class="btn btn-lg btn-default"><i class="fa fa-fw fa-lg fa-arrow-circle-up"></i></a>
+            <a href="#top" class="btn btn-default"><i class="fa fa-fw fa-lg fa-arrow-circle-up"></i></a>
         </span>
         <!-- searh box -->
         <div class="col-xs-12 text-center search">
