--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -25,7 +25,7 @@
                         <li>Ahora los <span class="label label-quest">Mapas</span> de aventura otorgan más <span class="label label-artifact">Runas</span> dependiendo de la dificultad.</li>
                         <li>Ahora los <span class="label label-default">Logros</span> otorgan 5 <span class="label label-artifact">Runas</span> cada uno al ser desbloqueados.</li>
                         <li>Ahora pueden comprarse <span class="label label-artifact">Packs de Runas</span> en el Mercado, a través de PayPal.</li>
-                        <li>Ahora puedes comentar en el apartado Ayuda usando Disqus. Si encuentras algún error, o tienes alguna sugerencia, avísame! También tenemos Twitter!</li>
+                        <li>Ahora puedes comentar en el apartado Ayuda usando Disqus. Si encuentras algún error, o tienes alguna sugerencia, avísame! También tenemos <a href="https://twitter.com/WyzardGame">Twitter</a>!</li>
                         <li>Ya estamos en una beta abierta! Si os gusta el juego, compartidlo con vuestros amigos! O invitadme a algo de vez en cuando!</li>
                     </ul>
                 </div>
