--- a/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
@@ -45,7 +45,7 @@
                     <p>Un cariñoso saludo a todos aquellos que me han ayudado a hacer este juego posible.</p>
                 </div>
                 <div class="panel-footer text-center">
-                    <i class="fa fa-fw fa-lg fa-twitter"></i><a href="https://twitter.com/fergardi" class="link">@fergardi</a>
+                    <i class="fa fa-fw fa-lg fa-twitter"></i><a href="https://twitter.com/WyzardGame" class="link">@WyzardGame</a>
                 </div>
             </div>
         </div>
