Modificadas fixtures y cuenta de twitter en about.

--- a/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
@@ -29,6 +29,7 @@
                     <a class="btn btn-sm btn-primary" target="_blank" href="http://fortawesome.github.io/Font-Awesome/">FontAwesome</a>
                     <a class="btn btn-sm btn-primary" target="_blank" href="http://datatables.net/">DataTables</a>
                     <a class="btn btn-sm btn-primary" target="_blank" href="http://payum.org/">Payum</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="https://disqus.com/">Disqus</a>
                     <p>El resultado está colgado también en mi propio servidor de producción, una RaspberryPi2, usando:</p>
                     <br>
                     <a class="btn btn-sm btn-primary" target="_blank" href="https://www.archlinux.org/">Arch Linux ARMv7</a>
