Arreglado un error con los nuevos indices de la ayuda en responsividad.

--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -23,13 +23,13 @@
                 </div>
             </div>
             <div class="btn-group btn-group-justified searchbox" role="group" aria-label="...">
-                <a href="#intro" class="btn btn-default"><i class="fa fa-fw fa-question-circle"></i>General</a>
-                <a href="#facciones" class="btn btn-default"><i class="fa fa-fw fa-rebel"></i>Facciones</a>
-                <a href="#unidades" class="btn btn-default"><i class="fa fa-fw fa-home"></i>Unidades</a>
-                <a href="#heroes" class="btn btn-default"><i class="fa fa-fw fa-group"></i>Héroes</a>
-                <a href="#hechizos" class="btn btn-default"><i class="fa fa-fw fa-magic"></i>Hechizos</a>
-                <a href="#artefactos" class="btn btn-default"><i class="fa fa-fw fa-joomla"></i>Artefactos</a>
-                <a href="#comentarios" class="btn btn-default"><i class="fa fa-fw fa-commenting"></i>Comentarios</a>
+                <a href="#intro" class="btn btn-default"><i class="fa fa-fw fa-question-circle"></i><span class="hidden-xs">General</span></a>
+                <a href="#facciones" class="btn btn-default"><i class="fa fa-fw fa-rebel"></i><span class="hidden-xs">Facciones</span></a>
+                <a href="#unidades" class="btn btn-default"><i class="fa fa-fw fa-home"></i><span class="hidden-xs">Unidades</span></a>
+                <a href="#heroes" class="btn btn-default"><i class="fa fa-fw fa-group"></i><span class="hidden-xs">Héroes</span></a>
+                <a href="#hechizos" class="btn btn-default"><i class="fa fa-fw fa-magic"></i><span class="hidden-xs">Hechizos</span></a>
+                <a href="#artefactos" class="btn btn-default"><i class="fa fa-fw fa-joomla"></i><span class="hidden-xs">Artefactos</span></a>
+                <a href="#comentarios" class="btn btn-default"><i class="fa fa-fw fa-commenting"></i><span class="hidden-xs">Comentarios</span></a>
             </div>
         </div>
         <div class="col-xs-12">
