Cambiados algunos fontawesome icons y dividida la ayuda en su seccion correspondiente del navbar.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -130,7 +130,7 @@
                             path: "{{ path('archmage_game_kingdom_summary') }}",
                             element: "#tour-turns",
                             title: "(3/26) Turnos",
-                            content: "Tal vez el recurso más importante. Comienzas con 300 turnos y se gana uno cada 3 minutos. Veamos qué hacer con ellos.",
+                            content: "Tal vez el recurso más importante. Comienzas con 300 turnos y se gana uno cada 3 minutos. Veamos qué hacer con ellos!",
                             placement: "bottom"
                         }, {
                             path: "{{ path('archmage_game_territory_build') }}",
