--- a/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    <a class="btn btn-default" href="{{ path( 'archmage_game_army_quest' ) }}"><i class="fa fa-fw fa-map"></i>Aventura</a>
+                    <a class="btn btn-default" href="{{ path( 'archmage_game_army_quest' ) }}"><i class="fa fa-fw fa-map"></i>Aventuras</a>
                 </div>
             </div>
         </div>
