--- a/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
@@ -29,7 +29,7 @@
                     <p>% TURNOS<sub>reducidos</sub> = GREMIOS<sub>jugador</sub> / 30</p>
                 </div>
                 <div class="panel-footer text-center">
-                    <a class="btn btn-default" href="{{ path( 'archmage_game_territory_build' ) }}"><i class="fa fa-fw fa-wrench"></i>Construir</a>
+                    <a class="btn btn-default" href="{{ path( 'archmage_game_territory_build' ) }}"><i class="fa fa-fw fa-industry"></i>Construir</a>
                 </div>
             </div>
         </div>
