--- a/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
@@ -14,7 +14,7 @@
         {% for construction in player.constructions %}
         <div class="col-xs-12 col-md-6 {% if loop.first %}col-md-offset-3{% endif %}" {% if loop.first %}id="territory-demolish"{% endif %}>
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-home"></i><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a> [{{ construction.quantity|nf }}]</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-industry"></i><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a> [{{ construction.quantity|nf }}]</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -63,7 +63,7 @@
                         </div>
                     </form>
                     {% else %}
-                        <a class="btn btn-default" href="{{ path( 'archmage_game_territory_build' ) }}"><i class="fa fa-fw fa-wrench"></i>Construir</a>
+                        <a class="btn btn-default" href="{{ path( 'archmage_game_territory_build' ) }}"><i class="fa fa-fw fa-industry"></i>Construir</a>
                     {% endif %}
                 </div>
             </div>
